apps/kubernetes/k3s/apps/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.hughboi.vip`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
  tls:
    secretName: hughboi-tls
